versions/v2.11/modules/en/pages/installation-and-upgrade/upgrades.adoc
= Upgrades
:revdate: 2026-08-03
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades.adoc 
:product-path: installation-and-upgrade/upgrades.adoc
ifeval::["{build-type}" != "community"]
:xref-air-gap: xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
:xref-backup-cluster: xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
:xref-air-gap-publish-images: xref:installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
:xref-helm-chart-in-rancher: xref:cluster-admin/helm-charts-in-rancher/helm-charts-in-rancher.adoc
:xref-upgrade-certmanager: xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc
:xref-air-gap-upgrade: xref:installation-and-upgrade/other-installation-methods/air-gapped/upgrades.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-air-gap: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/index.adoc
:xref-backup-cluster: xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher.adoc
:xref-air-gap-publish-images: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images.adoc
:xref-helm-chart-in-rancher: xref:how-to-guides/new-user-guides/helm-charts-in-rancher/index.adoc
:xref-upgrade-certmanager: xref:getting-started/installation-and-upgrade/resources/upgrade-cert-manager.adoc
:xref-air-gap-upgrade: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/air-gapped-upgrades.adoc
endif::[]

The following instructions will guide you through upgrading a Rancher server that was installed on a Kubernetes cluster with Helm. These steps also apply to air-gapped installs with Helm.

For the instructions to upgrade Rancher installed with Docker, refer to xref:[this page.]

To upgrade the components in your Kubernetes cluster, or the definition of the https://rancher.com/docs/rke/latest/en/config-options/services/[Kubernetes services] or https://rancher.com/docs/rke/latest/en/config-options/add-ons/[add-ons], refer to the https://rancher.com/docs/rke/latest/en/upgrades/[upgrade documentation for RKE], the Rancher Kubernetes Engine.

== Prerequisites

=== Access to kubeconfig

Helm should be run from the same location as your kubeconfig file, or the same location where you run your kubectl commands from.

If you installed Kubernetes with RKE2/K3s, the Kubeconfig is stored in the `/etc/rancher/rke2/rke2.yaml` or `/etc/rancher/k3s/k3s.yaml` directory depending on your chosen distribution.

The kubeconfig can also be manually targeted for the intended cluster with the `--kubeconfig` tag (see: https://helm.sh/docs/helm/helm/)

=== Review Known Issues

Review the list of known issues for each Rancher version, which can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums.]

=== Upgrade Path

[IMPORTANT] 
====
The only tested and supported Rancher upgrade path between minor versions (e.g. v2.13.x to v2.14.x) is to upgrade from the latest available patch version of your current running minor release to the latest available patch version of the next minor release.

Before initiating a minor version upgrade, verify that you are running the most recent patch release of your current version.

You can query the available chart versions with the Helm CLI:

. Update your local Helm repo cache.
+
[,sh]
----
helm repo update
----

ifeval::["{build-type}" != "community"]
. Search for available versions in your specific repository (e.g., rancher-prime):
+
[,sh]
----
helm search repo rancher-prime/rancher --versions
----
endif::[]
ifeval::["{build-type}" == "community"]
. Search for available versions in your xref:getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc#_helm_chart_repositories[specific repository] (e.g., rancher-stable):
+
[,sh]
----
helm search repo rancher-<CHART_REPO>/rancher --versions
----
endif::[]

If your installation is not on the latest patch version of the current minor release, you must upgrade to that version before proceeding to the next minor version.
====

=== Helm Version

The upgrade instructions assume you are using Helm 3.

=== For air-gapped installs: Populate private registry

For {xref-air-gap}[air-gapped installs only,] collect and populate images for the new Rancher server version. Follow the guide to {xref-air-gap-publish-images}[populate your private registry] with the images for the Rancher version that you want to upgrade to.

=== For upgrades with cert-manager older than 0.8.0

https://community.letsencrypt.org/t/blocking-old-cert-manager-versions/98753[Let's Encrypt will be blocking cert-manager instances older than 0.8.0 starting November 1st 2019.] Upgrade cert-manager to the latest version by following {xref-upgrade-certmanager}[these instructions.]

== Upgrade Outline

Follow the steps to upgrade Rancher server:

=== 1. Back up Your Kubernetes Cluster that is Running Rancher Server

Use the {xref-backup-cluster}[backup application] to back up Rancher.

You'll use the backup as a restore point if something goes wrong during upgrade.

=== 2. Update the Helm chart repository

. Update your local Helm repo cache.
+
[,shell]
----
helm repo update
----

ifeval::["{build-type}" != "community"]
. Get the repository name that you used to install Rancher.
+
[,shell]
----
helm repo list

NAME          	       URL
rancher-prime          <helm-chart-repo-url>
----
endif::[]
ifeval::["{build-type}" == "community"]
. Get the repository name that you used to install Rancher.
+
For information about the repos and their differences, see xref:getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc#_helm_chart_repositories[Helm Chart Repositories].
+
* Latest: Recommended for trying out the newest features.
+
[source,shell]
----
helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
----
+
* Stable: Recommended for production environments.
+
[source,shell]
----
helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
----
+
* Alpha: Experimental preview of upcoming releases.
+
[source,shell]
----
helm repo add rancher-alpha https://releases.rancher.com/server-charts/alpha
----
+
[NOTE]
====
Upgrades are not supported to, from, or between Alphas.
====
+
[source,shell]
----
helm repo list

NAME          	       URL
stable        	       https://charts.helm.sh/stable
rancher-<CHART_REPO>	 https://releases.rancher.com/server-charts/<CHART_REPO>
----
+
[NOTE]
====
If you want to switch to a different Helm chart repository, please follow the xref:getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc#_switching_to_a_different_helm_chart_repository[steps on how to switch repositories]. If you switch repositories, make sure to list the repositories again before continuing onto Step 3 to ensure you have the correct one added.
====
endif::[]

. Fetch the latest chart to install Rancher from the Helm chart repository.
+
This command will pull down the latest charts and save it in the current directory as a `.tgz` file.
+
[,plain]
----
ifeval::["{build-type}" != "community"]
helm fetch rancher-prime/rancher
endif::[]
ifeval::["{build-type}" == "community"]
helm fetch rancher-<CHART_REPO>/rancher
endif::[]
----
+
You can fetch the chart for the specific version you are upgrading to by adding in the `--version=` tag.  For example:
+
[,plain]
----
ifeval::["{build-type}" != "community"]
helm fetch rancher-prime/rancher --version={current-patch-version}
endif::[]
ifeval::["{build-type}" == "community"]
helm fetch rancher-<CHART_REPO>/rancher --version={current-patch-version}
endif::[]
----

=== 3. Review Rancher Feature Chart Versions Before Upgrade

Rancher feature charts follow specific release lines that align with Rancher versions. Major versions of feature charts correspond to Rancher minor versions and follow a defined versioning scheme.

Before upgrading Rancher, review any installed Rancher feature charts and upgrade them to the latest available version within their current chart release line. This helps ensure compatibility and avoids potential issues during or after the Rancher upgrade.

To review installed feature charts:

1. In the Rancher UI, go to **Apps & Marketplace**.
2. Select **Installed Apps**.
3. Review the chart versions and upgrade to the latest patch release within the same chart major version if needed.

For more information, see the {xref-helm-chart-in-rancher}#_versioning_scheme[Helm Charts in Rancher – Versioning Scheme].

=== 4. Upgrade Rancher

This section describes how to upgrade normal (Internet-connected) or air-gapped installations of Rancher with Helm.

[NOTE]
.Air Gap Instructions:
====

If you are installing Rancher in an air-gapped environment, skip the rest of this page and render the Helm template by following the instructions on {xref-air-gap-upgrade}[this page.]
====


Get the values, which were passed with `--set`, from the current Rancher Helm chart that is installed.

[,shell]
----
helm get values rancher -n cattle-system

hostname: rancher.my.org
----

[NOTE]
====

There will be more values that are listed with this command. This is just an example of one of the values.
====


[TIP]
====
ifeval::["{build-type}" != "community"]
Your deployment name may vary; for example, if you're deploying Rancher through the AWS Marketplace, the deployment name is 'rancher-prime'.
endif::[]
ifeval::["{build-type}" == "community"]
Your deployment name may vary; for example, if you're deploying Rancher through the AWS Marketplace, the deployment name is 'rancher-stable'.
endif::[]

Thus:

[,shell]
----
ifeval::["{build-type}" != "community"]
helm get values rancher-prime -n cattle-system

hostname: rancher.my.org
endif::[]
ifeval::["{build-type}" == "community"]
helm get values rancher-stable -n cattle-system

hostname: rancher.my.org
endif::[]
----
====


If you are upgrading cert-manager to the latest version from v1.5 or below, follow the {xref-upgrade-certmanager}#_option_c_upgrade_cert_manager_from_versions_15_and_below[cert-manager upgrade docs] to learn how to upgrade cert-manager without needing to perform an uninstall or reinstall of Rancher. Otherwise, follow the <<_steps_to_upgrade_rancher,steps to upgrade Rancher>> below.

==== Steps to Upgrade Rancher

Upgrade Rancher to the latest version with all your settings.

Take all the values from the previous step and append them to the command using `--set key=value`.

[,shell]
----
ifeval::["{build-type}" != "community"]
helm upgrade rancher rancher-prime/rancher \
  --namespace cattle-system \
  --set hostname=rancher.my.org
endif::[]
ifeval::["{build-type}" == "community"]
helm upgrade rancher rancher-<CHART_REPO>/rancher \
  --namespace cattle-system \
  --set hostname=rancher.my.org
endif::[]
----

[NOTE]
====

The above is an example, there may be more values from the previous step that need to be appended.
====


[TIP]
====
ifeval::["{build-type}" != "community"]
If you deploy Rancher through the AWS Marketplace, the deployment name is 'rancher-prime'.
endif::[]
ifeval::["{build-type}" == "community"]
If you deploy Rancher through the AWS Marketplace, the deployment name is 'rancher-stable'.
endif::[]

Thus:

[,shell]
----
ifeval::["{build-type}" != "community"]
helm upgrade rancher-prime rancher-prime/rancher \
  --namespace cattle-system \
  --set hostname=rancher.my.org
endif::[]
ifeval::["{build-type}" == "community"]
helm upgrade rancher-stable rancher-<CHART_REPO>/rancher \
  --namespace cattle-system \
  --set hostname=rancher.my.org
endif::[]
----
====

Alternatively, it's possible to export the current values to a file and reference that file during upgrade. For example, to only change the Rancher version:

. Export the current values to a file:
+
[,shell]
----
 helm get values rancher -n cattle-system -o yaml > values.yaml
----

. Update only the Rancher version:
+
[,shell]
----
ifeval::["{build-type}" != "community"]
 helm upgrade rancher rancher-prime/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version={current-patch-version}
endif::[]
ifeval::["{build-type}" == "community"]
helm upgrade rancher rancher-<CHART_REPO>/rancher \
  --namespace cattle-system \
  -f values.yaml \
  --version={current-patch-version}
endif::[]
----

=== 5. Verify the Upgrade

Log into Rancher to confirm that the upgrade succeeded.

== Known Upgrade Issues

A list of known issues for each Rancher version can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums.]
